[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 88

[tool.pyright]
include = [
    "pgcbots"
]
exclude = [
    "**/__pycache__"
]
pythonVersion = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "strict"
